[project]
name = "repo-security-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bandit>=1.9.4",
    "flask>=3.1.3",
    "gitpython>=3.1.46",
    "langchain-anthropic>=1.3.5",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "requests>=2.32.0",
]
